# x-scheduler

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: __init__.py
app/api/endpoints/: scheduler.py  uploads.py
app/core/: config.py
app/models/: __init__.py  post.py
app/schemas/: __init__.py  upload.py
app/services/: __init__.py  csv_processor.py  instance.py  logging_config.py  scheduler.py  x_api.py
app/views/: __init__.py  dashboard.py  index.py
frontend/: package-lock.json  package.json
frontend/static/css/: custom.css  custom.min.css  input.css  output.css
frontend/templates/: base.html
frontend/templates/components/: card.html  navbar.html
frontend/templates/pages/: dashboard.html  index.html  post_detail.html  thread_detail.html
